fixed mobile icon alignment

--- a/src/components/proposals/brand/navbar/navbar.scss
+++ b/src/components/proposals/brand/navbar/navbar.scss
@@ -200,11 +200,11 @@ a.skip-main:active {
       border-bottom-color: $primary;
     }
 
-    a >span:last-child{
+    a >span>i:last-child{
       margin-left:5px;
     }
 
-    a>span:first-child{
+    a>span>i:first-child{
       margin-right:5px;
     }
 
